# wav2lip-fastapi-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: websocket.py
app/models/: wav2lip_inference.py
app/models/Wav2Lip/: inference.py
app/services/: file_utils.py  lipsync_service.py
checkpoints/: README.md
static/: index.html
tests/: test.py
